--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,49 @@
+.fira-sans-normal {
+    font-family: "Fira Sans", serif;
+    font-weight: 100;
+    font-style: normal;
+  }
+
+  /* nav styles */
+
 nav{
     display: flex;
     justify-content: space-between;
+    margin: 20px 50px;
 }
-.hero1 .hero2{
+h3{
+    color: #0E0E0E;
+    margin: 0 45px 0 45px;
+}
+.btn-primary{
+    color: #006A50;
+    padding: 15px 30px;
+    margin: 0 45px 0 45px;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: 600;
+}
+/* banner ar styles */
+.banner{
     display: flex;
-    
+    justify-content: space-between;
+    padding: 50px 30px 50px 30px;
+    margin: 0 90px 0 90px;
+    border-radius: 8px;
+    background-color: #C6E4D6;
+}
+.pillars-title{
+    font-size: 40;
+    font-weight: bold;
+    color: #0E0E0E;
+    margin: 45px 45px 45px 90px;
+}
+.pillars{
+    background-color: white;
+    width: 200px;
+    margin: 10px;
+    text-align: center;
+    display: flex;
+    padding: 45px;
+    gap: 24px;
 }
